force-app/main/default/objects/Pre_Defined_Quote_Notes__c/Pre_Defined_Quote_Notes__c.object-meta.xml
<CustomObject>
    <label>Pre Defined Quote Note</label>
    <nameField>
        <displayFormat>QN-{0000}</displayFormat>
        <label>Pre Defined Quote Notes Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pre Defined Quote Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>