force-app/main/default/objects/Pre_Defined_Quote_Notes__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TECH SUPPORT</fullName>
            </value>
            <value>
                <fullName>EQUIPMENT QUOTED STATEMENT</fullName>
            </value>
            <value>
                <fullName>RENTAL PERIOD</fullName>
            </value>
            <value>
                <fullName>POWERLENS/AGM NOTE</fullName>
            </value>
            <value>
                <fullName>AGM INSTALLATION GUIDE NOTE</fullName>
            </value>
            <value>
                <fullName>FREIGHT QUOTES</fullName>
            </value>
            <value>
                <fullName>EFT PAYMENTS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>