force-app/main/default/objects/Pre_Defined_Quote_Notes__c/fields/NoteDetails__c.field-meta.xml
<CustomField>
    <fullName>NoteDetails__c</fullName>
    <label>Note Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>