force-app/main/default/objects/Pre_Defined_Quote_Notes__c/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <label>Order Number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>